# Crocodile

./: .gitignore  CMakeLists.txt  README.md  TODO.md  imgui.ini
Engine/: CMakeLists.txt  README.md
Engine/assets/data/: topography.csv
Engine/assets/itch/: index.html
Engine/assets/models/: tower-round-top-a.fbx
Engine/assets/shaders/opengl/: batch_sprite_fragment.fs  batch_sprite_vertex.vs  circle_fragment.fs  grid_fragment.fs  grid_vertex.vs  line_fragment.fs  line_vertex.vs  particles_fragment.fs  particles_vertex.vs  postprocessing_fragment.fs  sprite_fragment.fs  sprite_vertex.vs  text_fragment.fs  text_vertex.vs
Engine/assets/shaders/s2d/opengl/: batch_sprite_fragment.fs  batch_sprite_vertex.vs  circle_fragment.fs  circle_vertex.vs  grid_fragment.fs  line_fragment.fs  particles_fragment.fs  postprocessing_fragment.fs  postprocessing_vertex.vs  text_fragment.fs
Engine/assets/shaders/s2d/webgl/: batch_sprite_vertex.vs  circle_fragment.fs  line_fragment.fs  particles_vertex.vs  postprocessing_fragment.fs  sprite_fragment.fs  text_fragment.fs
Engine/assets/shaders/s3d/opengl/: mesh.fs  mesh.vs  model.fs  shader.fs  shader.vs  surface_shader.fs  surface_shader.vs  water_shader.vs
Engine/assets/shaders/webgl/: batch_sprite_fragment.fs  circle_vertex.vs  grid_fragment.fs  grid_vertex.vs  line_vertex.vs  particles_fragment.fs  particles_vertex.vs  postprocessing_vertex.vs  sprite_fragment.fs  sprite_vertex.vs  text_fragment.fs  text_vertex.vs
Engine/src/: Crocodile.h
Engine/src/Crocodile/: Application.cpp  Application.h  Clock.h  Core.h  EntryPoint.h  ResourceManager.cpp  ResourceManager.h
Engine/src/Crocodile/ai/: AStar.cpp  AStar.h
Engine/src/Crocodile/audio/: SoundBuffer.cpp  SoundBuffer.h  SoundDevice.h  SoundManager.h  SoundSource.cpp  SoundSource.h
Engine/src/Crocodile/graphics/: FrameBuffer.cpp  FrameBuffer.h  PostProcessing.cpp  PostProcessing.h  Shader.cpp  Shader.h  ShaderManager.h  Window.cpp  Window.h
Engine/src/Crocodile/s2d/: Animation.cpp  Animation.h  BatchSprite.cpp  BatchSprite.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Font.h  Interactive.cpp  Interactive.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  LevelParser.cpp  LevelParser.h  LightSystem.cpp  LightSystem.h  Object.cpp  Object.h  Particles.cpp  Particles.h  Scene.cpp  Scene.h  Text.h  Tile.h  UIContainer.cpp  UIContainer.h
Engine/src/Crocodile/s2d/col/: BoundingBox.cpp  BoundingBox.h
Engine/src/Crocodile/s2d/rendering/: BackgroundGrid.cpp  BackgroundGrid.h  BatchRenderer.cpp  BatchRenderer.h  CircleRenderer.cpp  CircleRenderer.h  LineRenderer.cpp  LineRenderer.h  ParticleRenderer.cpp  ParticleRenderer.h  PostProcessing.cpp  PostProcessing.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h
Engine/src/Crocodile/s2d/shapes/: Circle.cpp  Circle.h  Line.cpp  Line.h
Engine/src/Crocodile/s3d/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Model.cpp  Model.h  Object.cpp  Object.h  Quaternion.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h
Engine/src/Crocodile/s3d/rendering/: Renderer.cpp  Renderer.h
Engine/src/Crocodile/scripting/: GLMBindings.h  KeyMouseBindings.h  ScriptingSystem.cpp  ScriptingSystem.h
Engine/src/Crocodile/utils/: DirectoryWatcher.h  Logger.h  TextureReader.h  Timer.h  UUID.cpp  UUID.h
Engine/src/utils/: misc.h
Engine/src/utils/fonts/: font_guide.txt  habana.h  vollkorn_regular.h
Engine/src/utils/imgui/: ImGuiFileDialog.h  imgui.cpp  imgui.h  imgui_draw.cpp
Engine/src/utils/jsoncpp/: json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
Examples/box2d/: CMakeLists.txt  box2d.cpp
Examples/collision/: CMakeLists.txt  collision.cpp
Examples/dialogues/: CMakeLists.txt  main.cpp
Examples/platformer/: CMakeLists.txt  platformer.cpp
Examples/sandbox/: CMakeLists.txt  main.cpp
LDtkLoader/: CMakeLists.txt
LDtkLoader/include/LDtkLoader/: Entity.hpp  Enum.hpp  Field.hpp  Layer.hpp  Level.hpp  Project.hpp  Tile.hpp  Tileset.hpp  Utils.hpp  World.hpp
LDtkLoader/include/LDtkLoader/containers/: FieldsContainer.hpp  TagsContainer.hpp
LDtkLoader/include/LDtkLoader/defs/: EntityDef.hpp  FieldDef.hpp  LayerDef.hpp
LDtkLoader/src/: DataTypes.cpp  Entity.cpp  EntityDef.cpp  Enum.cpp  FieldsContainer.cpp  Layer.cpp  LayerDef.cpp  Level.cpp  Project.cpp  TagsContainer.cpp  Tile.cpp  Tileset.cpp  Utils.cpp  World.cpp  json.hpp
LevelEditor/: CMakeLists.txt  README.md  main.cpp
LevelEditor/src/: Canvas.cpp  Canvas.h  Connection.cpp  Connection.h  Editor.cpp  Editor.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Grid.cpp  Grid.h  Level.cpp  Level.h  ParticleEntity.cpp  Placer.cpp  Placer.h  Project.cpp  Project.h  StartScreen.cpp  StartScreen.h  TextEntity.cpp  TextEntity.h  World.cpp  World.h
LevelEditor/src/entities/: ConnectionEntity.cpp  ConnectionEntity.h  Entity.cpp  Entity.h  ParticleEntity.cpp  ParticleEntity.h  ZoneEntity.cpp  ZoneEntity.h
LevelEditor/src/level_ui/: LevelOptions.cpp  LevelOptions.h
LevelEditor/src/utils/: operations.h
Sandbox/: CMakeLists.txt  README.md  main.cpp
Sandbox/res/: world.ldtk
Sandbox/res/scripts/: player.lua
Sandbox/res/shaders/: earth_shader.fs  earth_shader.vs  test.fs  test.vs  water_shader.fs  water_shader.vs
Sandbox/src/: EarthSurface.cpp  EarthSurface.h  Scene.cpp  Scene.h  WaterSurface.cpp  WaterSurface.h  World.cpp  World.h
